examples/bad-files-examples/parse-errors/fileWithParseErrors.wlk
object pepita {
  var energia = 0
  var extra = 0

  // method without parentheses does not parse ok
  method energiaTotal = energia + extra
}